--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "swiper": "^6.7.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
